Fix control help alignment

--- a/src/components/ControlsHelp/index.css
+++ b/src/components/ControlsHelp/index.css
@@ -1,8 +1,7 @@
 .controlsHelp {
   position: absolute;
   bottom: 0;
-  padding: 1rem;
-  width: 100%;
+  padding: 1rem 0;
 
   h4 {
     text-align: center;
@@ -29,7 +28,6 @@
   .flex {
     display: flex;
     align-items: center;
-    justify-content: center;
   }
 }
 
